force-app/main/default/objects/Western_Union_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to maintain the credentials for Western Union</description>
    <fields>
        <fullName>Base_Url__c</fullName>
        <description>Base Url used for the Western Union Submission</description>
        <label>Base Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Callback_Url__c</fullName>
        <description>The callback which is used for the Western Union Submission string</description>
        <label>Callback Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>Reference to the client gateway configured for Western Union.</description>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <description>Western Union Service Id</description>
        <label>Service Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Western Union Config</label>
</CustomObject>